--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "d:\\USERDATA\\Documents\\4git\\tenders\\env\\Scripts\\python.exe"
+    "python.pythonPath": "d:\\USERDATA\\Documents\\4git\\tenders\\env\\Scripts\\python.exe",
+    "python.formatting.provider": "black"
 }
