--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,23 @@
-﻿appdirs==1.4.4
+appdirs==1.4.4
 beautifulsoup4==4.9.3
 black==20.8b1
 bs4==0.0.1
 cachetools==4.1.1
 certifi==2020.6.20
+cffi==1.15.0
 chardet==3.0.4
 click==7.1.2
+cryptography==36.0.2
 cssselect==1.1.0
 cssutils==1.0.2
 et-xmlfile==1.0.1
+fake-headers==1.0.2
 fake-useragent==0.1.11
+html5lib==1.1
 idna==2.10
 importlib-metadata==2.0.0
 jdcal==1.4.1
+jeepney==0.7.1
 keyring==21.4.0
 lxml==4.6.5
 mypy-extensions==0.4.3
@@ -20,6 +25,7 @@ openpyxl==3.0.5
 parse==1.19.0
 pathspec==0.8.1
 premailer==3.7.0
+pycparser==2.21
 pyee==8.1.0
 pymongo==3.11.3
 pyppeteer==0.2.5
@@ -30,6 +36,7 @@ pywin32-ctypes==0.2.0
 regex==2020.11.13
 requests==2.24.0
 requests-html==0.10.0
+SecretStorage==3.3.1
 selenium==3.141.0
 sendgrid==6.6.0
 six==1.15.0
@@ -41,6 +48,7 @@ typed-ast==1.4.2
 typing-extensions==3.7.4.3
 urllib3==1.25.10
 w3lib==1.22.0
+webencodings==0.5.1
 websockets==8.1
 yagmail==0.13.241
 zipp==3.2.0
