--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ cryptography==36.0.2
 cssselect==1.1.0
 cssutils==1.0.2
 et-xmlfile==1.0.1
-fake-headers==1.0.2
+# fake-headers==1.0.2
 fake-useragent==0.1.11
 html5lib==1.1
 idna==2.10
@@ -35,7 +35,7 @@ python-http-client==3.3.2
 pywin32-ctypes==0.2.0
 regex==2020.11.13
 requests==2.24.0
-requests-html==0.10.0
+# requests-html
 SecretStorage==3.3.1
 selenium==3.141.0
 sendgrid==6.6.0
@@ -44,11 +44,11 @@ soupsieve==2.0.1
 starkbank-ecdsa==1.1.0
 toml==0.10.2
 tqdm==4.57.0
-typed-ast==1.4.2
 typing-extensions==3.7.4.3
 urllib3==1.25.10
 w3lib==1.22.0
 webencodings==0.5.1
-websockets==8.1
-yagmail==0.13.241
+websockets
+typed-ast==1.5.4
+yagmail
 zipp==3.2.0
